# handmade-rs

./: .gitignore  CMakeLists.txt  Cargo.toml  build.bat  build_game.bat  build_win32.bat  copy_res.bat  copyres.bat  run.bat
base/: Cargo.toml
base/src/: lib.rs  math.rs
code/: win32_handmade.rs
game/: Cargo.toml  handmade.h  handmade_platform.h
game/src/: game.rs  handmade.h  lib.rs  random.rs  tile_map.rs
software_renderer/: Cargo.toml
software_renderer/src/: lib.rs
src/: game.rs  main.rs
win32/: CMakeLists.txt
win32/src/: handmade.h  win32_handmade.cpp  win32_handmade.h
