[package]
name = "handmade"
version = "0.0.0"
authors = ["Coeuvre Wong <coeuvre@gmail.com>"]

[[bin]]
name = "win32_handmade"
path = "code/win32_handmade.rs"

[dependencies]
winapi = "*"
dsound-sys = { git = "https://github.com/retep998/winapi-rs", path = "lib/dsound" }
gdi32-sys = "*"
kernel32-sys = "*"
user32-sys = "*"
xinput-sys = { git = "https://github.com/retep998/winapi-rs", path = "lib/xinput" }
